syntax = "proto3";

option csharp_namespace = "Proto.DTO.AnalysisByTicket";

import "DTO/time_slot.proto";
import "DTO/statistics_data.proto";

message AnalysisByTicketProto {
  string ticket_name = 1;
  repeated TimeSlotProto time_slots = 2;
  repeated StatisticsDataProto statistic_data = 3;
}
